website/static/main.css
#content-container {
    position: absolute;
    height: 95vh;
    overflow: hidden;
    background-color: cadetblue;
}

#login-container {
    margin: 0 auto;
    margin-top: 50vh;
    transform: translateY(-55%);
    max-width: 20rem;
    padding: 2rem;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.51);
}

#login-heading {
    padding: 0.25rem 0 2rem 0;
    margin: 0 auto;
}

nav{
    height: 5vh;
}

